--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: Shuming's Tech Blog
 description:
-logo: # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
+logo: bio-photo.png# 120x120 px default image used for Twitter summary card
+teaser: /teaser/default.jpg# 400x250 px default teaser image used in image archive grid
 locale:
 url: http://shuiming.github.io
 
@@ -22,15 +22,15 @@ gems:
 
 # Site owner
 owner:
-  name:
-  email:
+  name: 怀居
+  email: shuiming.chen@qq.com
   twitter:
   google:
     ad-client: 
     ad-slot: 
   bio: 
   avatar: bio-photo.jpg # 160x160 px image for author byline
-disqus-shortname:
+disqus-shortname: shuiming
 
 
 exclude: ["lib", "config.rb", ".sass-cache", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "*.sublime-project", "*.sublime-workspace", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "node_modules", "Gruntfile.js", "package.json"]
