--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:
 logo: # 120x120 px default image used for Twitter summary card
 teaser: /teaser/default.jpg# 400x250 px default teaser image used in image archive grid
 locale:
-url: http://shuiming.github.io
+url:
 
 # Jekyll configuration
 
@@ -30,7 +30,7 @@ owner:
     ad-slot: 
   bio: 
   avatar: bio-photo.png # 160x160 px image for author byline
-disqus-shortname: shuiming
+  disqus-shortname: shuiming
 
 
 exclude: ["lib", "config.rb", ".sass-cache", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "*.sublime-project", "*.sublime-workspace", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "node_modules", "Gruntfile.js", "package.json"]
